--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-split": "^2.0.14",
+    "socket.io-client": "^4.7.3",
     "sweetalert2": "^11.9.0",
     "uuid": "^9.0.1",
     "vanilla-context-menu": "^1.6.0",
