--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-split": "^2.0.14",
+    "serve": "^14.2.1",
     "socket.io-client": "^4.7.3",
     "sweetalert2": "^11.9.0",
     "uuid": "^9.0.1",
@@ -25,7 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
